<resources>
    <string name="app_name">Vowel Security</string>
    <string name="alert">Alert</string>
    <string name="under_development">Under-Development</string>
    <string name="ocr_error">Detector dependencies are not yet available.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="alert_error">Oops! We encountered a internal error. Please check again in a while.</string>
    <string name="alert_internet">Please check you internet connection and try again!</string>
    <string name="select">Select</string>
    <string name="take_photo">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="view_image">View Image</string>
    <string name="permission_camera_deny">Camera permission denied by user</string>
    <string name="alert_out_of_memory">Phone storage is full</string>
    <string name="alert_image_select">Please select image</string>
    <string name="alert_image_size">Selected image size is %d MB\nImage size must not be greater than 2MB</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome_msg">Welcome To Login</string>
    <string name="alert_invalid_role">No device user found with these credentials, Please contact with admin.</string>
    <string name="alert_empty_username">Please enter username.</string>
    <string name="alert_username_length">Username minimum length must be 5.</string>
    <string name="alert_empty_password">Please enter password.</string>
    <string name="alert_pwd_Length">Password length must be greater than or equal to 5.</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_notification">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_visitor">Add Visitor</string>
    <string name="title_visitor">Visitors</string>
    <string name="title_add_sp">Add Service Provider</string>
    <string name="title_guests">Guests</string>
    <string name="title_domestic_staff">Domestic Staff</string>
    <string name="title_staff">Staff</string>
    <string name="title_service_provider">Service Provider</string>
    <string name="title_ttl_expected_visitor">Total Expected Visitors</string>
    <string name="title_expected_visitor">Expected Visitors</string>
    <string name="title_blacklisted_visitor">Blacklisted Visitors</string>
    <string name="title_trespasser_visitor">Trespasser Visitors</string>
    <string name="title_flagged_visitor">Flagged Visitors</string>
    <string name="title_rejected_visitor">Rejected Visitors</string>
    <string name="title_house_keeping2">House \Help</string>
    <string name="title_service_provider2">Service \nProvider</string>
    <string name="title_filter_recurrent_visitor">Filter Recurrent Visitors</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="na">N/A</string>
    <string name="data_name">Name : %s</string>
    <string name="data_gender">Gender : %s</string>
    <string name="data_profile">Profile : %s</string>
    <string name="data_designation">Designation : %s</string>
    <string name="data_vehicle">Vehicle No : %s</string>
    <string name="vehicle_col">Vehicle No :</string>
    <string name="data_dynamic_premise">%s : %s</string>
    <string name="data_host">Host : %s</string>
    <string name="data_time">Time : %s</string>
    <string name="data_time_slot">Time : %s - %s</string>
    <string name="data_days_slot">Working Days</string>
    <string name="data_expected_time">Expected Time : %s</string>
    <string name="data_identity_type">Identity Type : %s</string>
    <string name="data_identity">Identity No : %s</string>
    <string name="data_nationality">Nationality : %s</string>
    <string name="data_staff_id">Staff ID : %s</string>
    <string name="data_mobile">Mobile : %s</string>
    <string name="data_elapsed">Elapsed Time : %s</string>
    <string name="data_register_by">Registered By : %s</string>
    <string name="data_register_date">Registered Date : %s</string>
    <string name="data_type">Visitor Type : %s</string>
    <string name="data_comp_name">Company Name : %s</string>
    <string name="data_host_checkout_time">Host Check Out Time : %s</string>
    <string name="data_time_in">Time In : %s</string>
    <string name="data_time_out">Time Out : %s</string>
    <string name="data_is_checkout">Host Check Out : %b</string>
    <string name="data_reason">Reason : %s</string>
    <string name="data_blacklisted_by">BlackListed By : %s</string>
    <string name="data_blacklisted_date">BlackListed Date : %s</string>
    <string name="data_flagged_by">Flagged By : %s</string>
    <string name="data_flagged_date">Flagged Date : %s</string>
    <string name="msg_add_option">Please select Check In option.</string>
    <string name="scan_id">Scan Id</string>
    <string name="manually">Manually</string>
    <string name="msg_check_in_option">Select an option for Check In.</string>
    <string name="send_notification">Send Notification</string>
    <string name="approve_by_call">Approve by Call</string>
    <string name="msg_check_in_confirmation">Please confirm resident to check in guest or not?</string>
    <string name="msg_check_in_call">Please call manually and wait for resident confirmation and select option according to resident.</string>
    <string name="commercial_msg_check_in_call">Please call manually and wait for staff confirmation and select option according to staff.</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="title_expected_guests">Expected Guests</string>
    <string name="vehicle">Vehicle No.</string>
    <string name="enter_name">Enter Name*</string>
    <string name="enter_identityNo">Enter Identity No*</string>
    <string name="enter_vehicle">Enter Vehicle No*</string>
    <string name="enter_contact">Enter Contact*</string>
    <string name="select_gender">Select Gender*</string>
    <string name="select_house">Search House Number*</string>
    <string name="select_owner">Select Owner*</string>
    <string name="select_host">Select Host*</string>
    <string name="add">Add</string>
    <string name="title_add_guest">Add Guest</string>
    <string name="title_scan_id">Scan ID</string>
    <string name="title_scan_barcode">QR Scan</string>
    <string name="close">Close</string>
    <string name="enter_address">Enter Address*</string>
    <string name="alert_empty_id">Please enter identity number.</string>
    <string name="alert_select_id">Please select identity type.</string>
    <string name="alert_select_nationality">Please select nationality.</string>
    <string name="alert_empty_name">Please enter name.</string>
    <string name="alert_empty_contact">Please enter contact number.</string>
    <string name="alert_contact_length">Contact number minimum length must be 7 and maximum length 12.</string>
    <string name="alert_empty_address">Please enter address.</string>
    <string name="alert_select_gender">Please select gender.</string>
    <string name="alert_select_house_no">Please select house number.</string>
    <string name="alert_select_owner">Please select house owner.</string>
    <string name="alert_select_host">Please select host.</string>
    <string name="alert_select_visitor">Please select visitor type.</string>
    <string name="alert_select_filter">Please select filter type.</string>
    <string name="alert_select_assigned_to">Please select assigned to.</string>
    <string name="alert_select_employment">Please select employment.</string>
    <string name="alert_enter_profile">Please enter work profile.</string>
    <string name="alert_enter_comp_name">Please enter company name.</string>
    <string name="alert_enter_comp_address">Please enter company address.</string>
    <string name="device_info">Device Info</string>
    <string name="app_version">Version %s</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="swahili">Swahili</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_logout">Logout</string>
    <string name="logout">Logout!</string>
    <string name="logout_msg">Are you sure you want to \nlogout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_lang">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="device_information">Device Information</string>
    <string name="model">Model : %s</string>
    <string name="MacID">Device ID : %s</string>
    <string name="title_about_us">About Us</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="deviceName">Name</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="gender">Gender</string>
    <string name="contact">Primary Contact</string>
    <string name="address">Address</string>
    <string name="email">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dummy_name">Hrithik Kaushal</string>
    <string name="dummy_username">Hrithik</string>
    <string name="dummy_contact">9876452310</string>
    <string name="dummy_address">Rajendra nagar, Indore</string>
    <string name="dummy_email">user@gmail.com</string>
    <string name="check_out_with_count">Check Out : %s</string>
    <string name="check_in_with_count">Check In : %s</string>
    <string name="search">Search</string>
    <string name="search_data">Name,Vehicle,Host Name,House No.</string>
    <string name="search_data_trespasser">Name,House No.</string>
    <string name="search_data_black">Name,Black Listed By</string>
    <string name="search_data_flag">Name,Flagged By</string>
    <string name="time_in">Time In </string>
    <string name="house_no">House No.</string>
    <string name="host">Host</string>
    <string name="select_visitor_type">Select Visitor Type</string>
    <string name="select_filter_type">Select Filter Type</string>
    <string name="visitor_type">Visitor Type</string>
    <string name="time_out">Time Out</string>
    <string name="image">IMAGE</string>
    <string name="success">Success</string>
    <string name="check_in_rejected">Check In Rejected.</string>
    <string name="check_in_success">Check In Successfully.</string>
    <string name="submit">Submit</string>
    <string name="or">OR</string>
    <string name="property">Property</string>
    <string name="text_without_special_char_value">0123456789- QWERTYUIOPASDFGHJKLZXCVBNMqwertzuiopasdfghjklyxcvbnm</string>
    <string name="vehicle_value">0123456789 QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="name_value">QWERTYUIOPASDFGHJKLZXCVBNM qwertzuiopasdfghjklyxcvbnm</string>
    <string name="email_value">0123456789QWERTYUIOPASDFGHJKLZXCVBNMqwertzuiopasdfghjklyxcvbnm@.</string>
    <string name="enter_device_name">Name</string>
    <string name="enter_device_type">Type</string>
    <string name="enter_device_serial">Serial number</string>
    <string name="enter_device_tag">Tag number</string>
    <string name="enter_device_manufacturer">Manufacturer</string>
    <string name="administrator">Administrator</string>
    <string name="please_select_appropriate_option">Please select the appropriate option to reset your password : </string>
    <string name="note_administrator">Note : Your password reset request will be sent to administrator</string>
    <string name="select_vehicle">Select Resident Vehicle</string>
</resources>