<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/black40p"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black20p" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:gravity="center"
                android:text="@string/take_photo"
                android:textColor="@color/light_blue"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black20p" />

            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/gallery"
                android:textColor="@color/light_blue"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black20p" />

            <TextView
                android:id="@+id/tvView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/view_image"
                android:textColor="@color/light_blue"
                android:textSize="14sp"
                android:visibility="gone" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="14sp" />

    </LinearLayout>

</layout>