<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.forgotpassword.ForgotPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.evisitor.ui.login.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingBottom="10dp">

            <include
                android:id="@+id/header"
                layout="@layout/header" />

            <ImageView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:padding="10dp"
                android:src="@drawable/forgot_password"
                app:layout_constraintDimensionRatio="w,1:1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/futura_round_bold"
                android:text="@string/please_select_appropriate_option"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/futura_round"
                    android:text="@string/email"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_administrator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/futura_round"
                    android:text="@string/administrator"
                    android:textSize="16sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/futura_book"
                android:hint="@string/enter_username"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="@integer/name_length"
                android:textColor="@color/black"
                android:digits="@string/name_value"
                android:textSize="16sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/futura_round_medium"
                android:text="@string/note_administrator"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_username" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/futura_book"
                android:hint="@string/enter_email"
                android:imeOptions="actionDone"
                android:digits="@string/email_value"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/email_length"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_note"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/futura_round_bold"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>