<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_card_corner"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_serial_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/futura_book"
        android:text="@string/property"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/tv_serial_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_serial_no"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/et_dev_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints="deviceName"
        android:digits="@string/text_without_special_char_value"
        android:fontFamily="@font/futura_round_medium"
        android:gravity="center_vertical"
        android:hint="@string/enter_device_name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="@integer/idno_length"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black40p"
        android:textSize="16sp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_serial_no"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_dev_type"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints="deviceName"
        android:digits="@string/text_without_special_char_value"
        android:fontFamily="@font/futura_round_medium"
        android:gravity="center_vertical"
        android:hint="@string/enter_device_type"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="@integer/idno_length"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black40p"
        android:textSize="16sp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_dev_name"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_serial_no"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints="deviceName"
        android:digits="@string/text_without_special_char_value"
        android:fontFamily="@font/futura_round_medium"
        android:gravity="center_vertical"
        android:hint="@string/enter_device_serial"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="@integer/idno_length"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black40p"
        android:textSize="16sp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_dev_type"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_tag_no"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints="deviceName"
        android:digits="@string/text_without_special_char_value"
        android:fontFamily="@font/futura_round_medium"
        android:gravity="center_vertical"
        android:hint="@string/enter_device_tag"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="@integer/idno_length"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black40p"
        android:textSize="16sp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_serial_no"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_manufacturer"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints="deviceName"
        android:digits="@string/text_without_special_char_value"
        android:fontFamily="@font/futura_round_medium"
        android:gravity="center_vertical"
        android:hint="@string/enter_device_manufacturer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="@integer/idno_length"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black40p"
        android:textSize="16sp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_tag_no"
        tools:ignore="LabelFor"
        tools:targetApi="o" />


</androidx.constraintlayout.widget.ConstraintLayout>